--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "asd"
+    "url": "git@github.com:alankyshum/Robinhood-Portfolio.git"
   },
   "keywords": [
     "robinhood",
