--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "test": "test"
   },
   "dependencies": {
-    "dotenv": "^4.0.0",
-    "node-fetch": "^1.7.3",
-    "nodemon": "^1.14.7"
+    "node-fetch": "^1.7.3"
   },
   "devDependencies": {},
   "scripts": {
