--- a/package.json
+++ b/package.json
@@ -2,17 +2,13 @@
   "name": "robinhood-portfolio",
   "version": "1.0.2",
   "description": "return your robinhood portfolio as a es6 promise",
-  "main": "index.js",
-  "eslint.packageManager": "yarn",
-  "directories": {
-    "test": "test"
-  },
-  "dependencies": {
-    "node-fetch": "^1.7.3"
-  },
-  "devDependencies": {},
+  "author": "alankyshum",
+  "license": "MIT",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "node example.js"
+    "build": "gulp",
+    "prepublish": "npm run build",
+    "debug": "gulp debug:js"
   },
   "repository": {
     "type": "git",
@@ -20,8 +16,22 @@
   },
   "keywords": [
     "robinhood",
-    "portfolio"
+    "nodejs api"
   ],
-  "author": "alankyshum",
-  "license": "MIT"
+  "eslint.packageManager": "npm",
+  "directories": {
+    "test": "test"
+  },
+  "dependencies": {
+    "node-fetch": "^1.7.3"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "gulp": "^4.0.0",
+    "gulp-babel": "^7.0.1",
+    "gulp-sourcemaps": "^2.6.4"
+  }
 }
