--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "robinhood-portfolio",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "return your robinhood portfolio as a es6 promise",
   "author": "alankyshum",
   "license": "MIT",
   "main": "dist/index.js",
   "scripts": {
     "build": "gulp",
-    "prepublish": "npm run build",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "dot-env": "0.0.1",
     "gulp": "^4.0.0",
     "gulp-babel": "^7.0.1",
     "gulp-sourcemaps": "^2.6.4"
