--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,8 @@
 {
   "presets": ["env"],
-  "plugins": ["transform-object-assign", "transform-object-rest-spread"]
+  "plugins": [
+    "transform-object-assign",
+    "transform-object-rest-spread",
+    "transform-class-properties"
+  ]
 }
