--- a/package.json
+++ b/package.json
@@ -26,12 +26,17 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "dot-env": "0.0.1",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.12.0",
     "gulp": "^4.0.0",
     "gulp-babel": "^7.0.1",
-    "gulp-sourcemaps": "^2.6.4"
+    "gulp-eslint": "^4.0.2"
   }
 }
