--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "return your robinhood portfolio as a es6 promise",
   "author": "alankyshum",
   "license": "MIT",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "scripts": {
     "build": "gulp",
     "prepublish": "npm run build"
